salesforce-migration/force-app/main/default/objects/Bouquet_Production_Progress__c/Bouquet_Production_Progress__c.object-meta.xml
<CustomObject>
    <label>Bouquet Production Progress</label>
    <pluralLabel>Bouquet Production Progress</pluralLabel>
    <nameField>
        <displayFormat>PROG-{0000}</displayFormat>
        <label>Progress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>