salesforce-migration/force-app/main/default/objects/Bouquet_Production_Progress__c/fields/Completed_Units__c.field-meta.xml
<CustomField>
    <fullName>Completed_Units__c</fullName>
    <label>Completed Units</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>