salesforce-migration/force-app/main/default/objects/Bouquet_Production_Progress__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
    <unique>true</unique>
</CustomField>