salesforce-migration/force-app/main/default/objects/Bouquet_Production_Progress__c/fields/Scheduled_Dates__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Dates__c</fullName>
    <label>Scheduled Dates (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>